parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Shared/_TopMenu.cshtml.pp
@using $rootnamespace$.Extensions
@using MvcSiteMapProvider.Web.Html

@(Request.IsAuthenticated ? Html.MvcSiteMap("System").Nav(false) : Html.MvcSiteMap("Public").Nav(false))
